# chess_project

./: CMakeLists.txt  README.md
src/: bluetoothBoardScanner.cpp  bluetoothBoardScanner.h  boardscanner.cpp  boardscanner.h  deviceinfo.cpp  deviceinfo.h  dialog.cpp  dialog.h  main.cpp
